--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
     "framer-motion": "^8.4.3",
+    "gray-matter": "^4.0.3",
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.1",
     "typescript": "4.9.4"
   },
   "devDependencies": {
